# atc-tools

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/pages/: offline-download.html
.github/workflows/: build-release.yml  check-data.yml  deploy-pages.yml  update-data.yml
preview/: cockpit.html
scripts/: build-single.mjs  check-data.mjs  sync-aerodromes.mjs  sync-airspace.mjs  sync-all.mjs  sync-waypoints.mjs
src/: aerodrome-layer.js  aerodrome-search.js  airspace-layers.js  api.js  compass-rose.js  ctr-boundaries.json  drawer.js  entitlements.js  fir-boundaries.json  fir-data.js  live-traffic.js  main.js  map.js  ops-support.js  results-panel.js  settings.js  tma-boundaries.json  trajectory.js  updater.js  version-indicator.js  welcome.js
src-tauri/: Cargo.toml  README.md  data_aerodromes.json  data_magvar.json  data_waypoints.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs
src-tauri/src/aisweb/: cache.rs  client.rs  embedded_data.rs  icao_list.rs  mod.rs  models.rs
src-tauri/src/commands/: aerodrome.rs  calculation.rs  mod.rs  settings.rs  sync.rs
src-tauri/src/navigation/: bearing.rs  coords.rs  haversine.rs  magnetic.rs  mod.rs
src/data/: aerodromes.json  metadata.json  waypoints.json
src/lib/: bearing.js  coord-parser.js  data-loader.js  defaults.js  flight-time.js  geo-trajectory.js  haversine.js  magnetic.js  storage.js
src/sim/: sim-commands.js  sim-engine.js  sim-main.js  sim-scenarios.js
src/styles/: components.css  main.css  map.css  (+4 more)
(+21 files in other folders)
