[package]
name = "atc-tools"
version = "0.1.0"
description = "ATC Tools - Ferramentas para Controle de Tráfego Aéreo"
authors = ["Leidson"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-store = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
quick-xml = { version = "0.37", features = ["serialize"] }
tokio = { version = "1", features = ["full"] }
